--- a/MoProject/.classpath
+++ b/MoProject/.classpath
@@ -14,5 +14,7 @@
 	<classpathentry kind="lib" path="C:/Users/mohammed.shahriar/Desktop/Tools/Selenium-java-3.13.0/libs/httpcore-4.4.9.jar"/>
 	<classpathentry kind="lib" path="C:/Users/mohammed.shahriar/Desktop/Tools/Selenium-java-3.13.0/libs/okhttp-3.10.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/mohammed.shahriar/Desktop/Tools/Selenium-java-3.13.0/libs/okio-1.14.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
+	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
